fix (#16) fixed style issues in dark mode

--- a/new-portfolio/src/components/about-me/about.scss
+++ b/new-portfolio/src/components/about-me/about.scss
@@ -6,7 +6,7 @@
 }
 .abtMewrapperDark {
   background-color: #061122;
-  background-image: url("https://res.cloudinary.com/dt9pwfpi5/image/upload/v1701798285/dvc2_svrx3u.png");
+  background-image: url("https://res.cloudinary.com/dt9pwfpi5/image/upload/v1702279579/nine_m4l54h.png");
 }
 .abtCont {
   display: flex;
