--- a/new-portfolio/src/components/contact/contact.scss
+++ b/new-portfolio/src/components/contact/contact.scss
@@ -49,7 +49,7 @@
 }
 .contactwrapperDark {
   background-color: #061122;
-  background-image: url("https://res.cloudinary.com/dt9pwfpi5/image/upload/v1701798285/dvc2_svrx3u.png");
+  background-image: url("https://res.cloudinary.com/dt9pwfpi5/image/upload/v1702279579/nine_m4l54h.png");
   p {
     color: #fff;
   }
