--- a/new-portfolio/src/components/header/header.scss
+++ b/new-portfolio/src/components/header/header.scss
@@ -207,7 +207,7 @@ button.scrollUp {
 
 #menuDark {
   background: #0d1727;
-  background-image: url("https://res.cloudinary.com/dt9pwfpi5/image/upload/v1701798285/dvc2_svrx3u.png");
+  background-image: url("https://res.cloudinary.com/dt9pwfpi5/image/upload/v1702279579/nine_m4l54h.png");
 }
 
 #menu li {
@@ -241,7 +241,7 @@ button.scrollUp {
     background-image: url("https://res.cloudinary.com/dt9pwfpi5/image/upload/v1700223294/Vector-bg_ijfifv.png");
   }
   .headerWrapperDark {
-    background-image: url("https://res.cloudinary.com/dt9pwfpi5/image/upload/v1701798285/dvc2_svrx3u.png");
+    background-image: url("https://res.cloudinary.com/dt9pwfpi5/image/upload/v1702279579/nine_m4l54h.png");
   }
   .header {
     padding: 1rem 4rem;
@@ -259,7 +259,7 @@ button.scrollUp {
     background-image: url("https://res.cloudinary.com/dt9pwfpi5/image/upload/v1700223294/Vector-bg_ijfifv.png");
   }
   .headerWrapperDark {
-    background-image: url("https://res.cloudinary.com/dt9pwfpi5/image/upload/v1701798285/dvc2_svrx3u.png");
+    background-image: url("https://res.cloudinary.com/dt9pwfpi5/image/upload/v1702279579/nine_m4l54h.png");
   }
   .header {
     width: 100%;
