--- a/new-portfolio/src/components/projects/projects.scss
+++ b/new-portfolio/src/components/projects/projects.scss
@@ -10,7 +10,7 @@
 }
 .projectContainerDark,
 .projectWrapperDark {
-  background-image: url("https://res.cloudinary.com/dt9pwfpi5/image/upload/v1701798285/dvc2_svrx3u.png");
+  background-image: url("https://res.cloudinary.com/dt9pwfpi5/image/upload/v1702279579/nine_m4l54h.png");
   background-color: #061122;
 }
 .introWrapper,
@@ -21,7 +21,7 @@
 }
 .introWrapperDark {
   background-color: #061122;
-  background-image: url("https://res.cloudinary.com/dt9pwfpi5/image/upload/v1701798285/dvc2_svrx3u.png");
+  background-image: url("https://res.cloudinary.com/dt9pwfpi5/image/upload/v1702279579/nine_m4l54h.png");
 }
 .flexWks {
   display: flex;
@@ -69,7 +69,7 @@
   }
   .projectContainerDark,
   .projectWrapperDark {
-    background-image: url("https://res.cloudinary.com/dt9pwfpi5/image/upload/v1701798285/dvc2_svrx3u.png");
+    background-image: url("https://res.cloudinary.com/dt9pwfpi5/image/upload/v1702279579/nine_m4l54h.png");
     background-color: #061122;
   }
 }
